--- a/envs/optitype_env.yml
+++ b/envs/optitype_env.yml
@@ -1,8 +1,10 @@
 name: optitype_env
+
 channels:
-  - conda-forge
-  - bioconda
   - defaults
+  - bioconda
+  - conda-forge
+
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
@@ -66,7 +68,7 @@ dependencies:
   - python_abi=2.7=1_cp27mu
   - pytz=2020.1=pyh9f0ad1d_0
   - pyutilib=5.1.3556=py27_0
-  - razers3=3.5.8=hb7ba0dd_0
+  - razers3=3.5.8=h33c0355_1
   - readline=8.0=he28a2e2_2
   - samtools=1.7=1
   - setuptools=44.0.0=py27_0
