fixed cluster logging

--- a/cluster_config.yml
+++ b/cluster_config.yml
@@ -3,7 +3,7 @@ __default__:
   nodes: 1
   cpus: 1
   mem: "10gb"
-  name: "output/{rule}.log"
+  name: "{rule}"
   tmpdir: "$TMPDIR"
   
 align_sc_rna_seq:
@@ -11,7 +11,7 @@ align_sc_rna_seq:
   cpus: 16
   mem: "64gb"
   time: "48:00:00"
-  name: "{rule}"
+  name: "{rule}_{wildcards.batch_id}_{wildcards.sample_id}"
   logs: "output/{wildcards.project}/logs/{rule}_{wildcards.batch_id}_{wildcards.sample_id}.log"
   tmpdir: "$TMPDIR"
 
@@ -20,7 +20,7 @@ hla_type_sc_rna_seq:
   cpus: 12
   mem: "64gb"
   time: "72:00:00"
-  name: "{rule}"
+  name: "{rule}_{wildcards.batch_id}_{wildcards.sample_id}"
   logs: "output/{wildcards.project}/logs/{rule}_{wildcards.batch_id}_{wildcards.sample_id}.log"
   tmpdir: "$TMPDIR"
   
@@ -29,7 +29,7 @@ kir_type_sc_rna_seq:
   cpus: 16
   mem: "32gb"
   time: "02:00:00"
-  name: "{rule}"
+  name: "{rule}_{wildcards.batch_id}_{wildcards.sample_id}"
   logs: "output/{wildcards.project}/logs/{rule}_{wildcards.batch_id}_{wildcards.sample_id}.log"
   tmpdir: "$TMPDIR"
   
@@ -38,7 +38,7 @@ subset_alignment_by_chr:
   cpus: 16
   mem: "24gb"
   time: "02:00:00"
-  name: "{rule}"
+  name: "{rule}_{wildcards.batch_id}_{wildcards.sample_id}"
   logs: "output/{wildcards.project}/logs/{rule}_{wildcards.batch_id}_{wildcards.sample_id}.log"
   tmpdir: "$TMPDIR"
 
@@ -47,7 +47,7 @@ subset_alignment_map:
   cpus: 16
   mem: "32gb"
   time: "08:00:00"
-  name: "{rule}"
+  name: "{rule}_{wildcards.batch_id}_{wildcards.sample_id}"
   logs: "output/{wildcards.project}/logs/{rule}_{wildcards.batch_id}_{wildcards.sample_id}.log"
   tmpdir: "$TMPDIR"
 
